--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/extension-accelerate": "^2.0.2",
     "dotenv": "^17.2.3",
     "next": "15.5.2",
+    "next-auth": "^5.0.0-beta.30",
     "react": "^19.0.0-rc",
     "react-dom": "^19.0.0-rc"
   },
